# kiro

./: PLAN.md  README.md  RENDERING_PLAN.md  commit_message.txt  debug_ast.txt  output.html  pyproject.toml
docs/: kiro_2.0.md
examples/: welcome.kiro
src/kiro_renderer/: __init__.py  cli.py  nodes.py  parser.py  renderer.py
src/kiro_renderer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_parser.py
