[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-renderer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Python renderer for the Kiro markup language."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pygments>=2.0"
]

[project.urls]
"Homepage" = "https://github.com/myhappydays/kiro"
"Bug Tracker" = "https://github.com/myhappydays/kiro/issues"

[project.scripts]
kiro = "kiro_renderer.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

